k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-container
          image: doragayev/portfolio-project:b087805
          imagePullPolicy: Always
          ports:
            - containerPort: 80
