k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
